# chebpy

./: .coveragerc  .editorconfig  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  .rhiza.env  .rhiza.history  .travis.yml  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.rst  LICENSE.rst  Makefile  Makefile.venv  README.md  README.rst  SECURITY.md  Taskfile.yml  class_hierarchy.txt  cliff.toml  implementation-notes.rst  mkdocs.yml  pyproject.toml  pytest.ini  renovate.json  requirements.txt  ruff.toml  setup.cfg  setup.py  test_chebop_examples.py  test_chebop_examples_windows.py  test_order.py
.binder/: environment.yml
.claude/commands/: rhiza_book.md  rhiza_quality.md  rhiza_update.md
.devcontainer/: README.md  bootstrap.sh  devcontainer.json  setup-task.sh  setup-uv.sh  startup.sh
.github/: CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  Makefile.gh  TOKEN_SETUP.md  copilot-instructions.md  dependabot.yml  pull_request_template.md  release.yml  renovate.json  template.yml
.github/.workflow/: unittest.yml
.github/DISCUSSION_TEMPLATE/: help-wanted.yml  ideas.yml
.github/agents/: agentic.mk  analyser.md  summarise.md  tests.md
.github/hooks/: session-end.sh  session-start.sh
.github/rhiza/: CONFIG.md  template.yml
.github/rulesets/: main-branch-protection.json
.github/scripts/: book.sh  build-extras.sh  bump.sh  marimushka.sh  post-release.sh  release.sh  sync.sh  update-readme-help.sh
.github/taskfiles/: build.yml  cleanup.yml  docs.yml  quality.yml
.github/workflows/: book.yml  ci.yml  copilot-setup-steps.yml  deptry.yml  devcontainer.yml  docker.yml  format.yml  marimo.yml  pre-commit.yml  release.yml  renovate_rhiza_sync.yml  rhiza.yml  rhiza_benchmark.yml  rhiza_benchmarks.yml  rhiza_book.yml  rhiza_ci.yml  rhiza_codeql.yml  rhiza_dep_compat_test.yml  rhiza_deptry.yml  rhiza_devcontainer.yml  rhiza_fuzzing.yml  rhiza_license.yml  rhiza_marimo.yml  rhiza_mutation.yml  rhiza_mypy.yml  rhiza_pip_audit.yml  rhiza_pre-commit.yml  rhiza_release.yml  rhiza_rhiza.yml  rhiza_scorecard.yml  rhiza_security.yml  rhiza_semgrep.yml  rhiza_sync.yml  rhiza_typecheck.yml  rhiza_validate.yml  rhiza_weekly.yml  security.yml  structure.yml  sync.yml  test.yml  (+1 more)
.rhiza/: .cfg.toml  .env  Makefile.rhiza  history  rhiza.mk  template-bundles.yml  template.yml
.rhiza/agentic/: Makefile.agentic
.rhiza/completions/: README.md  rhiza-completion.bash  rhiza-completion.zsh
.rhiza/customisations/: Makefile.customisations
.rhiza/docs/: CONFIG.md  RELEASING.md  WORKFLOWS.md
book/: Makefile.book  README.md  book.mk
chebpy/: __init__.py  algorithms.py  api.py  bndfun.py  chebfun.py  chebtech.py  classicfun.py  fun.py  onefun.py  smoothfun.py  utilities.py
chebpy/core/: ui.py  (+18 more)
docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOMIZATION.md  DEVCONTAINER.md  GLOSSARY.md  MARIMO.md  PRESENTATION.md  QUICK_REFERENCE.md  SECURITY.md  TESTS.md  about.md  api.md  build.sh  complex.ipynb  complex.rst  component_differences.md  demo.ipynb  demo.rst  features.md  getting_started.py  history.md  implementation-notes.rst  implementation.ipynb  index.md  mkdocs-base.yml  notebook-complex-chebfuns.ipynb  notebook-getting-started.ipynb  notebook-implementation-notes.ipynb  reports.md
figures/: disc_mat.py  eig.py  output.txt  spectral.py  test_chebop_examples.py
notebooks/: chebop_tutorial.ipynb
presentation/: Makefile.presentation  README.md
pyfun/: __init__.py  algorithms.py  bndfun.py  chebfun.py  chebtech.py  classicfun.py  decorators.py  exceptions.py  fun.py  onefun.py  settings.py  smoothfun.py  test.py  utilities.py
taskfiles/: build.yml  cleanup.yml  docs.yml  quality.yml
tests/: Makefile.tests  __init__.py  conftest.py  requirements.txt  test_100_coverage.py  test_adchebfun.py  test_adchebfun_edge_cases.py  test_algorithms.py  test_api.py  test_bndfun.py  test_chebfun.py  test_chebtech.py  test_chebyshev.py  test_chebyshev_arithmetic.py  test_chebyshev_complex.py  test_chebyshev_construction.py  test_chebyshev_diff_cumsum.py  test_chebyshev_plotting.py  test_chebyshev_roots.py  test_classicfun.py  test_compactfun.py  test_convolution.py  test_coverage_100.py  test_coverage_critical_paths.py  test_coverage_critical_paths.py.bak  test_decorators.py  test_docs.py  test_docstrings.py  test_env.py  test_exceptions.py  test_fun.py  test_gpr.py  test_importing.py  test_linalg.py  test_makefile.py  test_maps.py  test_onefun.py  test_plotting.py  test_quasimatrix.py  test_readme.py  (+14 more)
(+331 files in other folders)
