[project]
name = 'chebpy'
version = "0.0.0"
description = "A Python implementation of Chebfun"
authors = [{name='Mark Richardson', email= 'mrichardson82@gmail.com'}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.4.1"
]

[dependency-groups]
dev = [
    "seaborn==0.13.2",
    "marimo==0.19.11",
    "ruff>=0.14.14",
    "pandas",
    "plotly",
]

[project.urls]
repository = "https://github.com/chebpy/chebpy"
homepage = "https://chebpy.github.io/chebpy/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chebpy"]

[tool.deptry.package_module_name_map]
matplotlib = "matplotlib"
seaborn = "seaborn"
marimo = "marimo"
numpy = "numpy"
pandas = "pandas"
plotly = "plotly"
ruff = "ruff"
