[project]
name = 'chebfun'
version = "0.7.1"
description = "A Python implementation of Chebfun"
authors = [{name='Mark Richardson', email= 'mrichardson82@gmail.com'}]
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICENSE"]

dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.4.1"
]

[dependency-groups]
dev = [
    "seaborn==0.13.2",
    "marimo==0.22.4",
    "ruff>=0.14.14",
    "pandas",
    "plotly",
]

[project.urls]
repository = "https://github.com/chebpy/chebpy"
homepage = "https://chebpy.github.io/chebpy/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chebpy"]

[tool.deptry.package_module_name_map]
matplotlib = "matplotlib"
seaborn = "seaborn"
marimo = "marimo"
numpy = "numpy"
pandas = "pandas"
plotly = "plotly"
ruff = "ruff"

[tool.ty.rules]
invalid-method-override = "ignore"
invalid-argument-type = "ignore"
no-matching-overload = "ignore"
invalid-assignment = "ignore"
unsupported-operator = "ignore"
