[project]
name = 'chebfun'
version = "0.10.0"
description = "A Python implementation of Chebfun"
authors = [{name='Mark Richardson', email= 'mrichardson82@gmail.com'}]
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICENSE"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.4.1"
]

[dependency-groups]
dev = [
    "seaborn==0.13.2",
    "marimo==0.23.13",
    "pandas>=2.2",
    "plotly",
]
test = [
    "pytest>=8.0",
]
lint = [
    "ruff>=0.14.14",
]

[project.urls]
Homepage = "https://chebpy.github.io/chebpy/"
Repository = "https://github.com/chebpy/chebpy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chebpy"]

[tool.deptry.package_module_name_map]
matplotlib = "matplotlib"
seaborn = "seaborn"
marimo = "marimo"
numpy = "numpy"
pandas = "pandas"
plotly = "plotly"
ruff = "ruff"

[tool.ty.rules]
invalid-method-override = "ignore"
invalid-argument-type = "ignore"
no-matching-overload = "ignore"
invalid-assignment = "ignore"
unsupported-operator = "ignore"

[tool.interrogate]
# The project test suite is exempt from the docstring-coverage gate: test intent
# is carried by descriptive test names and assertions rather than docstrings.
# src/ (and the Rhiza-managed .rhiza/tests and .rhiza/utils) stay fully covered.
exclude = ["tests"]
