[metadata]
name = chebpy
version = attr: chebpy.__version__
description = Numerical computing with Chebyshev series approximations in Python
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Mark Richardson et al
author_email = mrichardson82@gmail.com
url = https://github.com/chebpy/chebpy
license = BSD 3-Clause
license_files = LICENSE.rst
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.16
    pyfftw>=0.11

[options.extras_require]
plot =
    matplotlib
